-       confirmed that server runs and DBeaver is connected to db
- US-01: (for User Story #1)
-       created routes for /reservations/new and /reservations pages
-       confirmed that app.js file includes the reservations router
-       added "methodNotAllowed" to errors folder
-       added "asyncErrorBoundary" to errors folder
-       added "hasProperties" to errors folder
-       updated reservations.controller.js and created reservations.service.js
-       seeded "tables" table
- US-#2: (for User Story #2)
-       wrote middleware for validating date in "reservations"
-       continued testing User Story #1; 6 tests still not passing
-       imported 2 functions from front-end/utils/date-time.js 
        to complete GET functions for /reservations route
-       troubleshooting until all tests for US-#1 pass
-       completed 2 functions to validate that the date is in the
        future and is not a Tuesday when the restaurant is closed
- US-#3: (for User Story #3)
-       Writing middleware to confirm time is between 
        10:30-21:30 in "reservations"
-       Created "GET" route for "tables" (actually part of US-#4)
-       Updated "tables" to remove "seat" column and change
        properties of "reservation_id" to default to NULL value
- US-#4: (for User Story #4)
-       Continue working on User Story #4 tests
- US-#5: (for User Story #5)
-       Create DELETE request for /tables/:table_id/seat
-       Repaired corrupt migration files & fixtures/tables
- User#4: (for User Story #4)
-       Completed tests for User Story #4 tests
        by creating a link for the "reservation_id" in "tables"
- US-#6: (for User Story #6)
-       Created a new migration file to add a "status" column to the
        "reservations" table
-       Ran new migration in development, test, preview, and
        production environments
-       All environments are seeded with data
- rate:
        Added rate limiter function to app.js to resolve GitHub error/alert